fix image container overlap issues by added it height

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,12 @@ img{
         .nav-box-image{
             margin-bottom: 15px;
             position: relative;
+            height: calc(55vh - 190px);
+
+            img{
+                width: 100%;
+                height: 100%;
+            }
 
             .nav-box-image-description{
                 position: absolute;
